--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,11 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  fonts:
+    - family: MyFontInter
+      fonts:
+        - asset: assets/fonts/Inter.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
