--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,11 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/pizza.jpg
+    - assets/images/burger.jpg
+    - assets/images/Naan.jpg
+    - assets/images/butter.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
