--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   get_it: ^8.2.0
   http: ^0.13.6
   flutter_svg: ^1.1.6
+  audioplayers: ^6.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +47,7 @@ dev_dependencies:
   bloc_test: ^9.1.0
   mockito: ^5.4.0
   build_runner: ^2.4.6
+  confetti: ^0.7.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
