--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  confetti: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
   bloc_test: ^9.1.0
   mockito: ^5.4.0
   build_runner: ^2.4.6
-  confetti: ^0.7.0
   flutter_launcher_icons: ^0.13.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
